# Code-Review-Environment

./: .env.example  .gitignore  BUG_REPORT.md  DEPLOYMENT.md  Dockerfile  HF_SPACE_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  start.py
env/: __init__.py  env.py
server/: __init__.py  app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: README.md  conftest.py
tests/infrastructure/: .gitkeep
